Update Jenkinsfile (added java line)